# financial-data-pipeline

./: .gitignore  Makefile  README.md  dbt_project.yml  docker-compose.yaml
dbt/models/marts/: fct_monthly_burn.sql  schema.yaml
dbt/models/staging/: schema.yml  sources.yaml  stg_transactions.sql
dbt/seeds/: exchange_rates.csv
ingestion/: .env.example  Dockerfile  pyproject.toml
ingestion/script/: config.py  fake_data_generator.py  fx_converter.py  main.py  uploader.py
ingestion/script/models/: constants.py  transaction.py
ingestion/scripts/: ingest_data.py
